[package]
name = "hasty"
version = "0.0.2"
authors = ["russ <rmorris@infocyte.com>"]

[dependencies]
url = "*"
serde = "*"
serde_json = "1.0"
serde_derive = "*"
webpki = "*"
mime = "*"
log = "*"

[dependencies.rustls]
default-features = false
version = "0.11.0"
features = ["dangerous_configuration"]
